--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
 
 {% if site.author.github or site.author.bitbucket or site.atom_feed.hide != true %}
 <div class="page__footer-follow">
-  <quote> <p style="text-align: left;">فَإِنَّ مَعَ العُسرِ يُسرًا</p> 
-<p style="text-align: left;">"So, surely with hardship comes ease"</p>
+  <quote> <p style="text-align: right;">فَإِنَّ مَعَ العُسرِ يُسرًا</p> 
+<p style="text-align: right;">"So, surely with hardship comes ease"</p>
 </quote>
   <ul class="social-icons">
     {% if site.data.ui-text[site.locale].follow_label %}
