--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 {% include base_path %}
 
 {% if site.author.github or site.author.bitbucket or site.atom_feed.hide != true %}
-<div class="page__footer-follow">
+<div class="page__footer">
   <quote> <p style="text-align: right;">فَإِنَّ مَعَ العُسرِ يُسرًا</p> 
 <p style="text-align: right;">"So, surely with hardship comes ease"</p>
 </quote>
@@ -21,6 +21,5 @@
   </ul>
 </div>
 {% endif %}
-
   <p></p>
 <div class="page__footer-copyright">&copy; 2023 – {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}<br> Last Updated {{ "now" | date: "%a, %b %d, %Y %H:%M" }}.</div>
