--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 {% include base_path %}
 
 {% if site.author.github or site.author.bitbucket or site.atom_feed.hide != true %}
-<div class="page__footer">
+<div class="page__footer-follow">
   <quote> <p style="text-align: right;">فَإِنَّ مَعَ العُسرِ يُسرًا</p> 
 <p style="text-align: right;">"So, surely with hardship comes ease"</p>
 </quote>
