--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,20 +5,20 @@
   <quote> <p style="text-align: right;">فَإِنَّ مَعَ العُسرِ يُسرًا</p> 
 <p style="text-align: right;">"So, surely with hardship comes ease"</p>
 </quote>
-  <ul class="social-icons">
+<!--   <ul class="social-icons"> -->
     {% if site.data.ui-text[site.locale].follow_label %}
-      <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
+<!--       <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li> -->
     {% endif %}
     {% if site.author.github %}
       <!-- <li><a href="http://github.com/{{ site.author.github }}"><i class="fab fa-github" aria-hidden="true"></i> GitHub</a></li> -->
     {% endif %}
     {% if site.author.bitbucket %}
-      <li><a href="http://bitbucket.org/{{ site.author.bitbucket }}"><i class="fab fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
+<!--       <li><a href="http://bitbucket.org/{{ site.author.bitbucket }}"><i class="fab fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li> -->
     {% endif %}
     {% if site.atom_feed.hide != true %}
     <!-- <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}"><i class="fa fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li> -->
     {% endif %}
-  </ul>
+<!--   </ul> -->
 </div>
 {% endif %}
 <div class="page__footer-copyright">&copy; 2023 – {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}<br> Last Updated {{ "now" | date: "%a, %b %d, %Y %H:%M" }}.</div>
