--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-{% include base_path %}
+<!-- {% include base_path %}
 
-{% if site.author.github or site.author.bitbucket or site.atom_feed.hide != true %}
+{% if site.author.github or site.author.bitbucket or site.atom_feed.hide != true %} -->
 <div>
   <quote> <p style="text-align: right;">فَإِنَّ مَعَ العُسرِ يُسرًا</p> 
 <p style="text-align: right;">"So, surely with hardship comes ease"</p>
