--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,5 +20,5 @@
     {% endif %}
 <!--   </ul> -->
 </div>
-{% endif %}
+<!-- {% endif %} -->
 <div class="page__footer-copyright">&copy; 2023 – {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}<br> Last Updated {{ "now" | date: "%a, %b %d, %Y %H:%M" }}.</div>
